# ref_mut_stack

./: .gitignore  Cargo.toml  LICENSE  README.md  justfile
.github/workflows/: _build.yml  ci.yml  codecov.yml
compile-tests/: Cargo.toml
compile-tests/tests/: tests.rs
compile-tests/tests/compile-fail/: drop_ref.rs  drop_stack.rs  reborrow.rs
src/: lib.rs
tests/: by_ref_builder.rs  impl_drop.rs  owned_builder.rs
