[package]
name = "ref_mut_stack"
version = "0.1.0"
edition = "2021"
rust-version = "1.89.0"
license-file = "LICENSE"
description = "Iteratively stack mutable references"
documentation = "https://docs.rs/ref_mut_stack"
repository = "https://github.com/arnodb/ref_mut_stack"
readme = "README.md"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage,coverage_nightly)'] }
